--- a/index.html
+++ b/index.html
@@ -262,17 +262,9 @@
             </div>
           </div>
         </section>
-      </main>
-    </div>
-  </body>
-</html>
-<!-- 
-
-
         <section class="education">
-          <h2 class="education__title">Образование</h2>
-          <div class="educaation__info"></div>
-          <div class="education__diploms">
+          <h2 class="education__title header__title">Образование &dArr;</h2>
+          <div class="education__diploms open">
             <img
               class="education__diploms-item"
               src="./image/education1.jpg"
@@ -315,12 +307,12 @@
             />
             <img
               class="education__diploms-item"
-              src="./image/education9.jpg"
+              src="./image/education15.jpg"
               alt="Диплом № 9"
             />
             <img
               class="education__diploms-item"
-              src="./image/education10.jpg"
+              src="./image/education16.jpg"
               alt="Диплом № 10"
             />
             <img
@@ -335,7 +327,12 @@
             />
             <img
               class="education__diploms-item"
-              src="./image/education13.jpg"
+              src="./image/education17.jpg"
+              alt="Диплом № 17"
+            />
+            <img
+              class="education__diploms-item"
+              src="./image/education9.jpg"
               alt="Диплом № 13"
             />
             <img
@@ -345,19 +342,15 @@
             />
             <img
               class="education__diploms-item"
-              src="./image/education15.jpg"
+              src="./image/education13.jpg"
               alt="Диплом № 15"
             />
             <img
               class="education__diploms-item"
-              src="./image/education16.jpg"
+              src="./image/education10.jpg"
               alt="Диплом № 16"
             />
-            <img
-              class="education__diploms-item"
-              src="./image/education17.jpg"
-              alt="Диплом № 17"
-            />
+
             <img
               class="education__diploms-item"
               src="./image/education18.jpg"
@@ -365,6 +358,15 @@
             />
           </div>
         </section>
+      </main>
+    </div>
+    <script src="./JavaScript/index.js"></script>
+  </body>
+</html>
+<!-- 
+
+
+
         <section class="reviews">
           <h2 class="reviews__title">Отзовы моих клиентов</h2>
         </section>
