--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <h1 class="header__title header_size">
           Ирина Дан Психолог <br />
-          С заботой о вашем ментальном состоянии
+          С заботой о вашем психологическом благополучии
         </h1>
       </header>
       <main>
@@ -307,7 +307,7 @@
             </li>
           </ul>
           <p class="info__text consultation__text">
-            При всё при этом качество работы сохраняется, результаты
+            При всём при этом качество работы сохраняется, результаты
             достигаются.
           </p>
           <div class="consultation__table">
