--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <a class="nav__link" href="#">Контакты</a>
         </nav>
         <a href="https://t.me/irdan_psy/" class="button" target="_blank"
-          >Записаться на консультацию</a
-        >
+          >Записаться на консультацию
+        </a>
         <h1 class="header__title header_size">
           Ирина Дан Психолог <br />
           С заботой о вашем психологическом благополучии
