--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a class="nav__link close" href="#">Публикации</a>
           <a class="nav__link" href="#situations">Направления</a>
           <a class="nav__link" href="#consultation">Консультации</a>
-          <a class="nav__link" href="#">Контакты</a>
+          <a class="nav__link" href="#footer">Контакты</a>
         </nav>
         <a href="https://t.me/irdan_psy/" class="button" target="_blank"
           >Записаться на консультацию
@@ -62,9 +62,7 @@
               Навалился груз проблем и не знаете, как справляться?
             </p>
             <p class="info__text">
-              Не откладывайте. Не ждите, когда этот ком Вас накроет! Чем раньше
-              вы начнете делать шаги по изменению свой жизни, тем быстрее и
-              дольше она будет дарить Вам радость и удовольствие!
+              Не откладывайте. Не ждите, когда этот ком Вас накроет!
             </p>
             <p class="info__text">
               Чем раньше вы начнете делать шаги по изменению свой жизни, тем
@@ -263,19 +261,18 @@
               полезные дела.
             </li>
           </ul>
-          <p class="info__text consultation__text">
-            При всём при этом качество работы сохраняется, результаты
-            достигаются.
+          <p class="info__text consultation__text consultation__size">
+            При всём этом качество работы сохраняется, результаты достигаются.
           </p>
           <div class="consultation__table">
             <div class="consultation__table-item">
               <p class="consultation__table-text">
-                ИНДИВИДУАЛЬНОЕ КОНСУЛЬТИРОВАНИЕ И ПСИХОТЕРАПИЯ
+                ИНДИВИДУАЛЬНОЕ КОНСУЛЬТИРОВАНИЕ И НЕМЕДИЦИНСКАЯ ПСИХОТЕРАПИЯ
               </p>
             </div>
             <div class="consultation__table-item">
               <p class="consultation__table-text">
-                СЕМЕЙНОЕ И ПАРНОЕ КОНСУЛЬТИРОВАНИЕ И ПСИХОТЕРАПИЯ
+                СЕМЕЙНОЕ И ПАРНОЕ КОНСУЛЬТИРОВАНИЕ И НЕМЕДИЦИНСКАЯ ПСИХОТЕРАПИЯ
               </p>
             </div>
             <div class="consultation__table-item">
@@ -474,7 +471,7 @@
         <section class="education">
           <!-- Slider main container -->
           <div class="swiper">
-            <h2 class="education__title header__title">Отзывы моих клиентов</h2>
+            <h2 class="rewiews_title header__title">Отзывы моих клиентов</h2>
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
@@ -583,7 +580,7 @@
           </div>
         </section>
       </main>
-      <footer class="footer">
+      <footer class="footer" id="footer">
         <div class="contacts">
           <h3 class="contacts__title">Контакты</h3>
           <div class="contacts__items">
