Mobile version_414px

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a href="https://t.me/irdan_psy/" class="button-reg" target="_blank"
             >Записаться на консультацию
           </a>
-          <h1 class="title header__title">
+          <h1 class="header__title">
             Ирина Дан Психолог <br />
             С заботой о вашем психологическом благополучии
           </h1>
